# resume_ai_project

./: .env  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  schema.sql
api_documentation/collection/: bruno.json  collection.bru  dxszgbv.bru  jgf.bru
api_documentation/collection/Interview/: Close Interview.bru  Complete Interview.bru  Complete.bru  Conversation Preview.bru  Conversation Update.bru  Detail Interview.bru  Edit Interview Conversation.bru  Inverview.bru  List.bru  Start Interview.bru  Update Violation.bru
api_documentation/collection/auth/: Inverview.bru  Password Reset.bru  Refresh.bru  Reset Password.bru  Reset password request.bru  User Info.bru  login.bru
api_documentation/collection/authv1/: Inverview.bru  Reset Password.bru
api_documentation/collection/user/: User Detail.bru
src/: main.py  router.py
src/auth/: model.py  route.py  service.py
src/authv1/: model.py  route.py  service.py
src/interview/: model.py  prompts.py  route.py  service.py
src/shared/: db.py  dependency.py  test1.py
src/user/: route.py  service.py
